--- a/src/css/vot-list.css
+++ b/src/css/vot-list.css
@@ -22,7 +22,12 @@
 }
 
 .vot-list__link {
+  color: rgba(0, 0, 0, 0.7);
   display: block;
+}
+
+.vot-list__link:hover {
+  color: rgba(0, 0, 0, 1);
 }
 
 .vot-list__name {
